# Order-system

./: README.md  README_LOGIN.md  app.py  auto_login.py  captcha_tool.py  config.json  cookie_helper.py  debug_page_text.txt  enhanced_login.py  firebase_sync.py  logger_config.py  login_now.py  login_page.html  login_page_debug.html  login_response_debug.html  main.py  manual_login.py  order_scraper.py  order_scraper_debug.py  order_scraper_requests.py  product_matcher.py  pyproject.toml  quick_setup.py  replit.nix  run.py  simple_web_login.py  start_web_helper.py  test_system.py  utils.py  web_helper.py  web_login_server.py  workflow_web_login.py
utils/: imgur_uploader.py  screenshot.py
